crates/keron-lang/tests/corpus/errors/check/map_get_wrong_default_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch in `get`: type parameter `V` was inferred as `Int` from an earlier argument, but this argument is `String`
  --> 3:26
  |
3 | val n: Int = get(m, "a", "fallback-string")
  |                          ^^^^^^^^^^^^^^^^^
